# aces

./: .markdownlint.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  README.md  STANDARDS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr-proposal.md  rfc-proposal.md
.github/workflows/: ci.yaml
adrs/: 0001-rust-core-python-periphery.md  0002-four-tier-verification-model.md  0003-interface-generation-in-runtime.md  0004-external-automata-crate.md  0005-polyrepo-strategy.md  0006-schema-and-spec-together-parser-separate.md  0007-protocol-in-sdks.md  0008-ocsf-as-exercise-telemetry-contract.md  0009-apache-2-licensing.md  0010-extract-design-not-code.md  0011-opentelemetry-for-internal-observability.md  0012-provider-dryrun-plan-api.md  0013-trunk-based-development.md  0014-branch-protection-and-ci.md  0015-grpc-as-wire-protocol.md  0016-versioning-strategy.md  0017-runtime-monolith-with-modular-internals.md  0018-project-standards-and-conventions.md  0019-formal-methods-for-critical-components.md  0020-architecture-and-policy-as-code.md  0021-defense-in-depth-security.md  TEMPLATE.md
rfcs/: TEMPLATE.md
templates/: CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bootstrap.sh  cargo-deny.toml  ci-governance.yaml  ci-python.yaml  ci-rust.yaml  github-setup.sh  gitignore-python  gitignore-rust  pre-commit-config-governance.yaml  pre-commit-config-python.yaml  pre-commit-config-rust.yaml  pull_request_template.md  pyproject.toml  rust-toolchain.toml
templates/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
tools/governance-mcp/: pyproject.toml
tools/governance-mcp/src/aces_governance_mcp/: __init__.py  server.py
tools/governance-mcp/tests/: conftest.py  test_governance.py  test_reference.py  test_validation.py
