# Package name uses underscore-separated lowercase (STANDARDS.md ยง1)
[project]
name = "aces_REPO_NAME"
version = "0.1.0"
description = "REPO-SPECIFIC: one-line description"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    # REPO-SPECIFIC: add runtime dependencies
]

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
